# BabaIsAgent-v0

./: .codacy.yml  .gitignore  .gitmodules  .lgtm.yml  .travis.yml  CMakeLists.txt  Dockerfile  README.md  appveyor.yml  codecov.yml  sonar-project.properties
CMake/: CodeCoverage.cmake  CompileOptions.cmake
Documents/: PythonAPI.md
Extension/BabaAgent/: CMakeLists.txt  DQN.py  NoisyDQN.py  REINFORCE.py  RandomAgent.py  env.py  environment.py  main.cc  random_agent.py
Extension/BabaAgent/Includes/BabaAgent/: agent.h  preprocess.h
Extension/BabaAgent/Sources/: agent.cc
Extension/BabaGUI/: CMakeLists.txt  main.cc
Extension/pyBaba/: CMakeLists.txt  main.cc
Extension/pyBaba/Includes/pyBaba/: Agent.h  Enums.h  Game.h
Extension/pyBaba/Sources/: Agent.cc  Enums.cc  Game.cc
Extension/pyGUI/: AI_actions.txt  GUI.py  gamedata.py  gamemaker.py  images.py
Includes/Baba/Agent/: Agent.h  Preprocess.h  RandomAgent.h
Includes/Baba/Common/: Utils.h
Includes/Baba/Entities/: EmptyEntity.h  Entity.h
Includes/Baba/Enums/: Action.h  EntityType.def  EntityType.h  Game.h  ObjectType.def  ObjectType.h  PropertyType.def  TextType.def  VerbType.def
Includes/Baba/Game/: Game.h  Object.h
Includes/Baba/Objects/: Object.h  ObjectBuilder.h
Includes/Baba/Rules/: Effects.h  Rule.h  Rules.h
Scripts/: Dockerfile.cosmic  Dockerfile.disco  Dockerfile.disco.clang-latest  Dockerfile.disco.gcc-latest  travis_build.sh  travis_build_codecov.sh  travis_build_codecov_sonar.sh  travis_build_docker.sh
Sources/Baba/: CMakeLists.txt
Sources/Baba/Agent/: Preprocess.cc  RandomAgent.cc
Sources/Baba/Common/: Utils.cc
Sources/Baba/Entities/: EmptyEntity.cc  Entity.cc
Sources/Baba/Game/: Game.cc  Object.cc
Sources/Baba/Objects/: Object.cc  ObjectBuilder.cc
Sources/Baba/Rules/: Effects.cc  Rule.cc  Rules.cc
UnitTest/: CMakeLists.txt  main.cc
UnitTest/Agent/: PreprocessTests.cc  RandomAgentTests.cc
UnitTest/Enums/: EnumTests.cc
UnitTest/Game/: GameTest.cc  GameTests.cc  ObjectTests.cc
UnitTest/Object/: ObjectBuilderTest.cc
UnitTest/Rules/: EffectTest.cc  EffectTests.cc  RulesTest.cc  RulesTests.cc
